# adventures

./: .buildpacks  .eslintrc.js  .gitignore  .tool-versions  .travis.yml  Cargo.toml  Gemfile  README.md  bower.json  brunch-config.js  elixir_buildpack.config  ember-cli-build.js  mix.exs  package-lock.json  package.json  phoenix_static_buildpack.config
unmnemonic_devices_vrs/: .env  .env.test  Cargo.toml  README.md
unmnemonic_devices_vrs/.sqlx/: query-0ded76b522a3c96adbe0e0d0e302e661821f5513af55c148a149e190b6fd98a9.json  query-293c331e00d9c39f6dd0704784fb4fd84f31895cb24ece582987f5c6045f8144.json  query-2d2b86d33eaa2a12efd645b88ee1236ba6eed94252d082795b39da70a93b9e76.json  query-3498a2280d2e833edb56e03d7a39b4e359295c1ffea6abe54017ab762ce2a48b.json  query-61f7f4cb1b42d3d16153e5e37f2c805808e8b2b2bea7cdf6f91b510e0f7af86b.json  query-7a111ead453636a919a196ffaa34b7e109c17c5bf7004626f0b5d8a13a40753b.json  query-7cb7e265c4c8f76d1999f9bfd77b1310dee2e389418b956715434c4b875c3ff5.json  query-83a6e554f2b1f8e144d0b29062d5624669155dbdde0d9ff1d2337779cd030a19.json  query-8ca9fa588be885a72a7f863a255a7b0b1058e15dba23bf177107fef53ff462ea.json  query-9a88dcf375f7b5054ff3298af81c17707938baf7eddab0d61725d560fa38924d.json  query-a427a89d76ff4bdfd31d00694fe9a7489b24fee7c2187785206a48917235c2c2.json  query-adf669fbd4dc3bc650860506a19e2e8c122303c03f37daf1e2ad77ac0289bb8c.json  query-b6bef49a5d4312c49c41e0549612d90c17adc4285f827f697158ee109f78fef0.json  query-cb2da448b98f8d34b22f1463a99e3bce644414be229a68482d9d76bee86a7d99.json  query-ef1986488466151e54f276e2cdd4f74c4a8a8e327302640f4c6cd6011bd4f28b.json
unmnemonic_devices_vrs/assets/css/: layout.css  teams.css  voicemails.css
unmnemonic_devices_vrs/assets/js/: calls.js  layout.js  prompts.js  teams.js  voicemails.js
unmnemonic_devices_vrs/src/: auth.rs  config.rs  helpers.rs  lib.rs  main.rs  prompts.toml  render_xml.rs  twilio_form.rs
unmnemonic_devices_vrs/src/routes/: calls.rs  conferences.rs  meetings.rs  mod.rs  recordings.rs  recordings_objects.rs  recordings_prompts.rs  recordings_regions.rs  root.rs  teams.rs  util.rs  voicemails.rs
unmnemonic_devices_vrs/src/templates/: calls.hbs  hangup.hbs  prerecord.hbs  record.hbs  recordings.hbs  restart.hbs  root.hbs  teams.hbs
unmnemonic_devices_vrs/tests/: common.rs  helpers.rs  root.rs
unmnemonic_devices_vrs/tests/admin/: calls.rs  destinations.rs  main.rs  prompts.rs  regions.rs  teams.rs  voicemails.rs
unmnemonic_devices_vrs/tests/api/: calls.rs  conferences.rs  helpers.rs  main.rs  meetings.rs  recordings.rs  root.rs  teams.rs
unmnemonic_devices_vrs/tests/fixtures/: books.sql  calls-recordings.sql  calls-teams.sql  calls.sql  destinations-recordings-all.sql  destinations-recordings.sql  meetings-progress.sql  meetings-recordings.sql  meetings.sql  recordings-encouraging-listened.sql  recordings-encouraging-unapproved.sql  recordings-encouraging.sql  recordings-everything.sql  recordings-prompts-pure-chromatin.sql  recordings-prompts-pure-monitoring.sql  recordings-prompts-pure-welcome.sql  recordings-prompts-testa-voicepass.sql  recordings-prompts-testb-welcome.sql  recordings-to-team-call.sql  recordings-voicemails.sql  regions-recordings-all.sql  regions-recordings.sql  regions.sql  schema.sql  settings-down.sql  settings-ending.sql  settings-no-notify-supervisor.sql  settings-override.sql  settings.sql  teams-progress.sql  teams-recordings-all.sql  teams-recordings.sql  teams.sql  users-maybe-admin.sql  users-with-no-voicepass.sql  users.sql
unmnemonic_devices_vrs/tests/voice/: conferences.rs  main.rs  meetings.rs  recordings.rs  (+7 more)
unmnemonic_devices_vrs/twilio-rust/: Cargo.toml  README.md
(+1994 files in other folders)
