[package]
name = "unmnemonic_devices_vrs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "unmnemonic_devices_vrs"

[dependencies]
axum = "0.6"
axum-template = { version = "0.15", features = ["handlebars"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
handlebars = { version = "4", features = ["dir_source"] }
http = "0.2.9"
mime = "0.3.16"
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.3"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
select = "0.6"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.0-alpha.2", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio",
  "uuid",
] }

[dependencies.uuid]
version = "1.3.1"
features = ["serde"]

[dev-dependencies]
speculoos = "0.11"
reqwest = "0.11"
