[package]
name = "unmnemonic_devices_vrs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "unmnemonic_devices_vrs"

[dependencies]
axum = { version = "0.6", features = ["tracing"] }
axum-template = { version = "0.15", features = ["handlebars"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
handlebars = { version = "4", features = ["dir_source"] }
http = "0.2.9"
mime = "0.3.16"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.3"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
select = "0.6"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.0-alpha.2", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
urlencoding = "2.1.2"
base64 = "0.21.4"
axum-macros = "0.3.8"
axum-extra = "0.8.0"
handlebars-concat = "0.1.2"
serde-querystring-axum = "0.2.0"

[dependencies.uuid]
version = "1.3.1"
features = ["serde", "v4"]

[dev-dependencies]
speculoos = "0.11"
wiremock = "0.5.19"
