[package]
name = "unmnemonic_devices_vrs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "unmnemonic_devices_vrs"

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
axum-template = { version = "2", features = ["handlebars"] }
bcrypt = "0.15"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
handlebars = { version = "5", features = ["dir_source"] }
http = "1"
mime = "0.3.16"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.3"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
select = "0.6"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.2", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
urlencoding = "2.1.2"
base64 = "0.21.4"
axum-macros = "0.4"
axum-extra = "0.9"
handlebars-concat = "0.1.4"
serde-querystring-axum = "0.2.0"
url = { version = "2.4.1", features = ["serde"] }

[dependencies.uuid]
version = "1.3.1"
features = ["serde", "v4"]

[dev-dependencies]
speculoos = "0.11"
wiremock = "0.5.19"
